--- a/Projeto/paginas/pagina_inicial.html
+++ b/Projeto/paginas/pagina_inicial.html
@@ -23,5 +23,8 @@
 			<a href="#"><img src="../logos/linkedin.png" class="image"></a>
 			<a href="#"><img src="../logos/twitter.png" class="image"></a>
 		</div>
+		<div>
+			<button>GIT TESTE</button>
+		</div>>
 </body>
 </html>
