teste de conflitos

--- a/Projeto/paginas/pagina_inicial.html
+++ b/Projeto/paginas/pagina_inicial.html
@@ -14,7 +14,7 @@
 		<li class="li"><a class="links" href="https://www.facebook.com/">Facebook</a></li>
 		<li class="li"><a class="links" href="https://www.youtube.com">YouTube</a></li>
 		</div><!--center-->
-		<button class="btn-teste">TESTE</button>
+		<button class="btn-teste">TESTE git</button>
 	</header>
 		<div class="social-icons">
 			<a href="#"><img src="../logos/facebook.png" class="image"></a>
